[metadata]
name = occinet
summary = OOI: OpenStack OCCI Interface
license = Apache-2
description-file =
    README.md
author = LIP - CSIC
author-email =  ooi@lists.launchpad.net 
home-page = https://launchpad.net/ooi
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages = 
	ooi
	occinet

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = occinet/locale
domain = occinet

[update_catalog]
domain = occinet
output_dir = occinet/locale
input_file = occinet/locale/occinet.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = occinet/locale/occinet.pot

[entry_points]
paste.filter_factory =
    occinet = occinet.wsgi.middleware:OCCINetworkMiddleware.factory

[pbr]
# Have pbr generate the module indexes like sphinx autodoc
autodoc_index_modules = True
    
# Exclude modules that won't build with autodoc (or that we don't want doc'ed);
# this requires updating the exclude_patterns variable in doc/source/conf.py
autodoc_exclude_modules = occinet.test.*
                          ooi.tests.*
